custom improved a little bit more but saving to stop

--- a/src/style.css
+++ b/src/style.css
@@ -10,3 +10,19 @@ body{
     padding: 30px;
     border-radius: 16px;
 }
+.search-form-input{
+background-color: #f9f7fe;
+border: none;
+border-radius: 6px;
+width: 80%;
+font-size: 16px;
+padding: 15px 20px;
+}
+.search-form-button{
+    background: #885df1;
+    padding: 15px 20px;
+    border: none;
+    border-radius: 6px;
+    color: white;
+
+}
