injected the temperature icons

--- a/src/style.css
+++ b/src/style.css
@@ -63,7 +63,7 @@ main{
 }
 .weather-app-icon{
     font-size: 44px;
-    margin-top: 22px;
+    width: 88px;
 }
 .weather-app-temperature{
     font-size: 88px;
